# french-new-word-generator

./: README.md  pyproject.toml
data/: francais_long.txt
examples/: example_bigram.py  example_compare_all.py  example_mlp.py  example_random.py  example_wavenet.py
src/word_generator/: __init__.py  dataset_creation.py  layers.py
src/word_generator/generators/: __init__.py  bigram.py  mlp.py  random.py  wavenet.py
